# polars_iptools

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  justfile  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  run.py  sitemap.xml
.cargo/: config.toml
.github/workflows/: docs.yml  publish_to_pypi.yml
api-reference/: index.html
benches/: ip_benchmarks.rs
configuration/: index.html
docs/: api-reference.md  configuration.md  examples.md  index.md  ip-types.md
examples/: index.html
ip-types/: index.html
polars_geoip/: __init__.py
polars_iptools/: __init__.py  geoip.py  iptools.py  spur.py  types.py  utils.py
search/: search_index.json
src/: geoip.rs  iptools.rs  lib.rs  maxmind.rs  spur.rs  spurdb.rs  utils.rs
tests/: test_extension_types.py  test_geoip.py  test_iptools.py
