[package]
name = "polars-iptools"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/erichutchins/polars_iptools"
readme = "README.md"

[lib]
name = "polars_iptools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.15.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.41.2", features = [
    "dtype-struct",
], default-features = false }
maxminddb = { version = "0.24.0", features = ["mmap"] }
lazy_static = "1.5.0"
iptrie = "0.8.5"
ipnet = "2.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "fat"
opt-level = 3
