[package]
name = "polars-iptools"
version = "0.1.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/erichutchins/polars_iptools"
readme = "README.md"

[lib]
name = "polars_iptools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.18.0", features = ["derive", "dtype-struct"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.44.2", default-features = false }
maxminddb = { version = "0.24.0", features = ["mmap"] }
lazy_static = "1.5.0"
iptrie = "0.8.8"
ipnet = "2.10.1"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "fat"
opt-level = 3
