[package]
name = "polars-iptools"
version = "0.1.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/erichutchins/polars_iptools"
readme = "README.md"

[lib]
name = "polars_iptools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.25.0", features = [
    "derive",
    "dtype-struct",
    "lazy",
] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.52", features = [
    "performant",
    "lazy",
    "array_count",
    "ndarray",
    "dtype-array",
    "dtype-struct",
], default-features = false }
maxminddb = { version = "0.25.0", features = ["mmap"] }
lazy_static = "1.5.0"
iptrie = "0.10.3"
ipnet = "2.11.0"
polars-arrow = "0.52.0"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = "fat"
opt-level = 3
