[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-iptools"
description = "Polars extension for IP address parsing and enrichment including geolocation"
keywords = ["polars", "dfir", "geoip"]
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["polars>=1.3.0"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.maturin]
module-name = "polars_iptools._internal"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.test]
dependencies = ["maturin", "mypy", "polars", "pytest", "pytest", "ruff"]

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311", "312", "313"]

[tool.hatch.envs.test.scripts]
tests = "python -m pytest tests"

[tool.ruff]
line-length = 88
fix = true

[tool.uv]
dev-dependencies = [
    "hatch>=1.14.0",
    "maturin>=1.0,<2.0",
    "mypy>=1.11.2",
    "pre-commit>=4.1.0",
    "pytest>=8.3.3",
    "ruff>=0.9.6",
]
